--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "license": "",
   "version": "0.0.1",
   "private": true,
-  "description": "React Typescript Library Boilerplate",
+  "description": "React Component Library",
   "author": "Charles Coqueret",
   "scripts": {
     "dev": "yarn storybook",
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx,.json --color ./",
+    "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx,.json --fix --color ./",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,js,jsx}\"",
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx,json,js,jsx}\"",
-    "storybook": "start-storybook -p 9001 -s ./src/assets -c .storybook",
+    "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "jest --maxWorkers=2 --colors --coverage",
     "test:watch": "yarn test --watch"
   },
@@ -17,7 +19,15 @@
   "module": "index.esm.js",
   "types": "index.d.ts",
   "dependencies": {
-    "classnames": "^2.2.6"
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/pro-light-svg-icons": "^6.0.0",
+    "@fortawesome/pro-regular-svg-icons": "^6.0.0",
+    "@fortawesome/pro-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@szhsin/react-menu": "^2.3.4",
+    "classnames": "^2.2.6",
+    "color-alpha": "^1.1.3",
+    "react-select": "^5.2.2"
   },
   "peerDependencies": {
     "react": "^16.8.0",
