--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "target": "es5",
     "types": ["node", "jest"]
   },
-  "exclude": ["node_modules",],
+  "exclude": ["node_modules"],
   "include": ["./src"]
 }
