--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@szhsin/react-menu": "^2.3.4",
     "classnames": "^2.2.6",
     "color-alpha": "^1.1.3",
+    "date-fns": "^2.28.0",
+    "react-datepicker": "^4.7.0",
     "react-select": "^5.2.2"
   },
   "peerDependencies": {
@@ -38,9 +40,11 @@
     "@storybook/react": "^6.1.2",
     "@testing-library/react": "^11.2.2",
     "@types/classnames": "^2.2.11",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12",
     "@types/react": "^16.9.10",
+    "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^16.9.10",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
