--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@szhsin/react-menu": "^2.3.4",
     "classnames": "^2.2.6",
     "color-alpha": "^1.1.3",
+    "color-rgba": "^2.4.0",
     "date-fns": "^2.28.0",
     "react-datepicker": "^4.7.0",
     "react-select": "^5.2.2"
@@ -40,6 +41,7 @@
     "@babel/core": "^7.12.7",
     "@storybook/addon-essentials": "^6.1.2",
     "@storybook/addon-links": "^6.1.2",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^6.1.2",
     "@testing-library/react": "^11.2.2",
     "@types/classnames": "^2.2.11",
