--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/react": "^6.1.2",
     "@testing-library/react": "^11.2.2",
     "@types/classnames": "^2.2.11",
+    "@types/color-rgba": "^2.1.0",
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12",
