--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx,json,js,jsx}\"",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "build-storybook": "build-storybook -o public",
-    "test": "jest --maxWorkers=2 --colors --coverage",
-    "test:watch": "yarn test --watch"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --maxWorkers=2 --colors --coverage"
   },
   "main": "index.js",
   "module": "index.esm.js",
@@ -44,9 +45,9 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^6.1.2",
     "@testing-library/react": "^11.2.2",
-    "@types/classnames": "^2.2.11",
+    "@testing-library/user-event": "^13.5.0",
     "@types/color-rgba": "^2.1.0",
-    "@types/date-fns": "^2.6.0",
+    "@types/enzyme": "^3.10.11",
     "@types/jest": "^26.0.15",
     "@types/node": "^12",
     "@types/react": "^16.9.10",
@@ -57,6 +58,8 @@
     "babel-loader": "^8.2.1",
     "classnames": "^2.2.6",
     "css-loader": "^5.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -67,6 +70,7 @@
     "prettier": "^2.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-test-renderer": "^16.14.0",
     "sass": "^1.49.8",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
