Fix: Cleaning typescript configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,17 @@
     "declaration": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "lib": ["dom", "es5"],
+    "lib": ["dom", "esnext"],
     "module": "esNext",
     "moduleResolution": "node",
-    "noImplicitAny": false,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": false,
+    "noUnusedParameters": true,
+    "noErrorTruncation": true,
     "outDir": "./dist",
     "pretty": true,
     "sourceMap": true,
