--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/color-rgba": "^2.1.0",
     "@types/enzyme": "^3.10.11",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.15",
     "@types/node": "^12",
     "@types/react": "^16.9.10",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^16.9.10",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "babel-loader": "^8.2.1",
