--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "color-alpha": "^1.1.3",
     "color-rgba": "^2.4.0",
     "date-fns": "^2.28.0",
+    "numeral": "^2.0.6",
     "react-datepicker": "^4.7.0",
+    "react-number-format": "^4.9.1",
     "react-select": "^5.2.2"
   },
   "peerDependencies": {
@@ -51,6 +53,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.15",
     "@types/node": "^12",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^16.9.10",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^16.9.10",
