--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "React Component Library",
   "author": "Charles Coqueret",
   "scripts": {
+    "build": "rollup -c",
     "build-storybook": "build-storybook -o public",
     "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist && npm cache verify",
     "dev": "yarn storybook",
@@ -19,9 +20,9 @@
     "test:coverage": "jest --maxWorkers=2 --colors --coverage",
     "test:watch": "jest --watch"
   },
-  "main": "index.js",
-  "module": "index.esm.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/pro-light-svg-icons": "^6.0.0",
@@ -45,6 +46,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@storybook/addon-essentials": "^6.1.2",
     "@storybook/addon-links": "^6.1.2",
     "@storybook/addon-postcss": "^2.0.0",
@@ -79,6 +82,10 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-test-renderer": "^16.14.0",
+    "rollup": "^2.69.2",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.31.2",
     "sass": "^1.49.8",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
