--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "description": "React Component Library",
   "author": "Charles Coqueret",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c && npm run build:css && npm run build:css-min",
     "build-storybook": "build-storybook -o public",
-    "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist && npm cache verify",
+    "build:css": "sass src/assets/index.scss dist/index.css --error-css --stop-on-error",
+    "build:css-min": "sass src/assets/index.scss dist/index.min.css --error-css --stop-on-error --style=compressed",
+    "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist public && npm cache verify",
     "dev": "yarn storybook",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,js,jsx}\"",
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx,json,js,jsx}\"",
-    "lint": "eslint . --ext .js,.ts,.jsx,.tsx,.json --color ./",
-    "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx,.json --fix --color ./",
+    "lint": "eslint --ext .js,.ts,.jsx,.tsx,.json --color ./",
+    "lint:fix": "eslint --ext .js,.ts,.jsx,.tsx,.json --fix --color ./",
     "nuke": "npm run clean && npm install",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "jest",
@@ -23,6 +25,7 @@
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "style": "disc/style.min.css",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/pro-light-svg-icons": "^6.0.0",
