--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "rollup": "^2.69.2",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-typescript2": "^0.31.2",
     "sass": "^1.49.8",
     "sass-loader": "^10.1.0",
