Feat: Atoms/Portal component creation (creating a div independent from the current dom which is released once unmounted)
Feat: Atoms/Tooltip Adding portal in tooltip to avoid messing with local DOM
Feat: Molecules/Buttons Adding portal and changing Menu to controlled menu
Fix: Atoms/Tooltip adjusting css

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "yarn storybook",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,js,jsx}\"",
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx,json,js,jsx}\"",
+    "license": "license-checker --production --relativeLicensePath --csv --out ./THIRD-PARTY.txt",
     "lint": "eslint --ext .js,.ts,.jsx,.tsx,.json --color ./",
     "lint:fix": "eslint --ext .js,.ts,.jsx,.tsx,.json --fix --color ./",
     "nuke": "npm run clean && npm install",
@@ -80,6 +81,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "license-checker": "^25.0.1",
     "prettier": "^2.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
