--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "color-alpha": "^1.1.3",
     "color-rgba": "^2.4.0",
     "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react-datepicker": "^4.7.0",
     "react-number-format": "^4.9.1",
-    "react-select": "^5.2.2"
+    "react-select": "^5.2.2",
+    "yup": "^0.32.11"
   },
   "peerDependencies": {
     "react": "^16.8.0",
