--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,27 +1,29 @@
 name: Build and Deploy
-on: 
+on:
   push:
-    paths: ["src/components/**"] # Trigger the action only when files change in the folders defined here
+    branches:
+      - main
 jobs:
   build-and-deploy:
+    concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
-        with:
-          persist-credentials: false
-      - name: Configure npm
+        uses: actions/checkout@v3
+
+      - name: Configure npm ⚙
         run : |
           npm config set '//npm.fontawesome.com/:_authToken' "${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}"
+
       - name: Install and Build 🔧
-        run: | # Install npm packages and build the Storybook files
-          npm install
+        run: |
+          npm ci
           npm run build-storybook
+
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.6.2
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: main
-          FOLDER: docs-build
-          CLEAN: true
-          TARGET_FOLDER: docs
+          branch: gh-pages
+          folder: docs-build
+          clean: true
+          target-folder: docs
