--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -13,7 +13,8 @@ jobs:
 
       - name: Configure npm ⚙
         run : |
-          npm config set //npm.fontawesome.com/:_authToken ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+          npm config set "@fortawesome:registry" https://npm.fontawesome.com/
+          npm config set "//npm.fontawesome.com/:_authToken" ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
 
       - name: Install and Build 🔧
         run: |
