--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Charles Coqueret",
   "scripts": {
     "build": "rollup -c && npm run build:css && npm run build:css-min",
-    "build-storybook": "build-storybook -o docs-build -s static",
+    "build-storybook": "build-storybook -o docs-build",
     "build:css": "sass src/assets/index.scss dist/index.css --error-css --stop-on-error",
     "build:css-min": "sass src/assets/index.scss dist/index.min.css --error-css --stop-on-error --style=compressed",
     "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist docs-build && npm cache verify",
