--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install, lint, test and Build
         run: |
-          npm install -ci
+          npm ci
           npm run lint
           npm run test
           npm run build-storybook
