--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -22,8 +22,22 @@ jobs:
         run: |
           npm ci
           npm run lint
-          npm run test
+          npm run test:coverage
           npm run build-storybook
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
+        with:
+          branch: gh-pages
+          folder: docs-build
+          clean: true
+          target-folder: docs
+      
+      - name: Code Coverage
+        uses: coverallsapp/github-action@v1.1.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          parallel: true
 
   coverage:
     name: Code Coverage 🛎️
@@ -37,16 +51,3 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel-finished: true
   
-  deploy:
-    name: Deploy 🚀
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    needs: build-and-test
-    steps:
-        - name: Deploy 
-          uses: JamesIves/github-pages-deploy-action@v4.2.5
-          with:
-            branch: gh-pages
-            folder: docs-build
-            clean: true
-            target-folder: docs
