--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "lib": ["dom", "esnext"],
-    "module": "esNext",
+    "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
@@ -24,14 +24,17 @@
     "types": ["node", "jest"]
   },
   "exclude": [
-    "node_modules",
-    "dist",
-    "public",
-    "**/*.stories.tsx",
-    "**/*.test.tsx",
-    "**/*.test.ts",
+    "**/*.spec.ts",
     "**/*.spec.tsx",
-    "**/*.spec.ts"
+    "**/*.stories.tsx",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/__mocks__",
+    "coverage",
+    "dist",
+    "docs-build",
+    "node_modules",
+    "public"
   ],
   "include": ["./src"]
 }
