--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,4 +1,4 @@
-name: Build, Lint, Test, Coverage and Deploy
+name: Build, Lint, Test, Publish, Coverage and Deploy
 on:
   push:
     branches:
@@ -51,3 +51,18 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel-finished: true
   
+  release:
+    name: release 🪄
+    runs-on: ubuntu-latest
+    needs: coverage
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
+      - run: npm ci
+      - run: npm run build
+      - run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
