--- a/package.json
+++ b/package.json
@@ -1,10 +1,30 @@
 {
   "name": "@cc/ghost-design-system",
-  "license": "",
+  "license": "MIT",
   "version": "0.0.1",
-  "private": true,
-  "description": "React Component Library",
-  "author": "Charles Coqueret",
+  "private": false,
+  "description": "Ghost design system - React Component Library",
+  "author": {
+    "name": "Charles Coqueret",
+    "url": "https://github.com/CharlesCoqueret"
+  },
+  "homepage": "https://charlescoqueret.github.io/ghost-design-system",
+  "bugs": {
+    "url": "https://github.com/charlescoqueret/ghost-design-system/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/charlescoqueret/ghost-design-system.git"
+  },
+  "keywords": [
+    "react",
+    "react-component",
+    "design",
+    "table",
+    "header",
+    "input",
+    "navigation"
+  ],
   "scripts": {
     "build": "rollup -c && npm run build:css && npm run build:css-min",
     "build-storybook": "build-storybook -o docs-build -s ./static",
@@ -17,6 +37,7 @@
     "lint": "eslint --ext .js,.ts,.jsx,.tsx,.json --color ./",
     "lint:fix": "eslint --ext .js,.ts,.jsx,.tsx,.json --fix --color ./",
     "nuke": "npm run clean && npm install",
+    "publish": "semantic-release --no-ci",
     "storybook": "start-storybook -p 9001 -c .storybook -s ./static",
     "test": "jest",
     "test:coverage": "jest --maxWorkers --colors --coverage",
@@ -27,11 +48,6 @@
   "types": "dist/index.d.ts",
   "style": "disc/style.min.css",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.0",
-    "@fortawesome/pro-light-svg-icons": "^6.1.0",
-    "@fortawesome/pro-regular-svg-icons": "^6.1.0",
-    "@fortawesome/pro-solid-svg-icons": "^6.1.0",
-    "@fortawesome/react-fontawesome": "^0.1.18",
     "@szhsin/react-menu": "^2.3.4",
     "classnames": "^2.3.1",
     "color-alpha": "^1.1.3",
@@ -45,6 +61,11 @@
     "yup": "^0.32.11"
   },
   "peerDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/pro-light-svg-icons": "^6.1.0",
+    "@fortawesome/pro-regular-svg-icons": "^6.1.0",
+    "@fortawesome/pro-solid-svg-icons": "^6.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-router-dom": "^6.2.2"
@@ -53,6 +74,11 @@
     "@babel/core": "^7.12.7",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^9.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "@storybook/addon-essentials": "^6.1.2",
     "@storybook/addon-links": "^6.1.2",
     "@storybook/addon-postcss": "^2.0.0",
@@ -94,6 +120,7 @@
     "rollup-plugin-typescript2": "^0.31.2",
     "sass": "^1.49.8",
     "sass-loader": "^10.1.0",
+    "semantic-release": "^19.0.2",
     "style-loader": "^2.0.0",
     "ts-jest": "^27.1.3",
     "ts-loader": "^8.0.11",
@@ -101,6 +128,52 @@
     "webpack": "^4.42.1"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=14.0.0"
+  },
+  "release": {
+    "branches": [
+      "main",
+      "next"
+    ],
+    "preset": "conventionalcommits",
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "releaseRules": [
+            {
+              "type": "revert",
+              "release": "patch"
+            },
+            {
+              "type": "build",
+              "release": "patch"
+            }
+          ]
+        }
+      ],
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/changelog",
+        {
+          "changelogTitle": "# Changelog"
+        }
+      ],
+      [
+        "@semantic-release/npm",
+        {
+          "pkgRoot": "dist"
+        }
+      ],
+      [
+        "@semantic-release/git",
+        {
+          "message": "chore(release): ${nextRelease.version} [skip ci]",
+          "assets": [
+            "CHANGELOG.md"
+          ]
+        }
+      ]
+    ]
   }
 }
