Build: fix dependencies

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -60,9 +60,12 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "14.x"
-      - run: npm ci
-      - run: npm run build
-      - run: npx semantic-release
+      - run : |
+          npm config set "@fortawesome:registry" https://npm.fontawesome.com/
+          npm config set "//npm.fontawesome.com/:_authToken" ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+          npm ci
+          npm run build
+          npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
