--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "babel-loader": "^8.2.1",
+    "conventional-changelog-conventionalcommits": "^4.6.3",
     "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
