--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
@@ -11,10 +11,7 @@
   "bugs": {
     "url": "https://github.com/charlescoqueret/ghost-design-system/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/charlescoqueret/ghost-design-system.git"
-  },
+  "repository": "https://github.com/charlescoqueret/ghost-design-system.git",
   "keywords": [
     "react",
     "react-component",
@@ -36,7 +33,7 @@
     "lint": "eslint --ext .js,.ts,.jsx,.tsx,.json --color ./",
     "lint:fix": "eslint --ext .js,.ts,.jsx,.tsx,.json --fix --color ./",
     "nuke": "npm run clean && npm install",
-    "publish": "semantic-release --no-ci",
+    "prepublish": "rm -rf build && npm run build",
     "storybook": "start-storybook -p 9001 -c .storybook -s ./static",
     "test": "jest",
     "test:coverage": "jest --maxWorkers --colors --coverage",
