--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "scripts": {
     "build": "rollup -c && npm run build:css && npm run build:css-min",
-    "build-storybook": "build-storybook -o docs-build -s ./static",
+    "build-storybook": "build-storybook -o docs-build",
     "build:css": "sass src/assets/index.scss dist/index.css --error-css --stop-on-error",
     "build:css-min": "sass src/assets/index.scss dist/index.min.css --error-css --stop-on-error --style=compressed",
     "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist docs-build && npm cache verify",
@@ -33,7 +33,7 @@
     "lint": "eslint --ext .js,.ts,.jsx,.tsx,.json --color ./",
     "lint:fix": "eslint --ext .js,.ts,.jsx,.tsx,.json --fix --color ./",
     "nuke": "npm run clean && npm install",
-    "storybook": "start-storybook -p 9001 -c .storybook -s ./static",
+    "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "jest",
     "test:coverage": "jest --maxWorkers --colors --coverage",
     "test:watch": "jest --watch"
@@ -43,9 +43,9 @@
   "types": "dist/index.d.ts",
   "style": "disc/style.min.css",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@szhsin/react-menu": "^2.3.4",
+    "@szhsin/react-menu": "^3.0.0",
     "classnames": "^2.3.1",
     "color-alpha": "^1.1.3",
     "color-rgba": "^2.4.0",
@@ -58,29 +58,29 @@
     "yup": "^0.32.11"
   },
   "peerDependencies": {
-    "@fortawesome/pro-light-svg-icons": "^6.1.0",
-    "@fortawesome/pro-regular-svg-icons": "^6.1.0",
-    "@fortawesome/pro-solid-svg-icons": "^6.1.0",
+    "@fortawesome/pro-light-svg-icons": "^6.1.1",
+    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.7",
-    "@fortawesome/pro-light-svg-icons": "^6.1.0",
-    "@fortawesome/pro-regular-svg-icons": "^6.1.0",
-    "@fortawesome/pro-solid-svg-icons": "^6.1.0",
-    "@rollup/plugin-commonjs": "^21.0.2",
+    "@babel/core": "^7.17.8",
+    "@fortawesome/pro-light-svg-icons": "^6.1.1",
+    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.1.1",
+    "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^9.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "@storybook/addon-essentials": "^6.1.2",
-    "@storybook/addon-links": "^6.1.2",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/react": "^6.1.2",
+    "@storybook/react": "^6.4.19",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/color-rgba": "^2.1.0",
@@ -93,8 +93,8 @@
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^16.9.10",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "babel-loader": "^8.2.1",
     "conventional-changelog-conventionalcommits": "^4.6.3",
     "css-loader": "^5.0.1",
@@ -112,18 +112,18 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-test-renderer": "^16.14.0",
-    "rollup": "^2.69.2",
+    "rollup": "^2.70.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-typescript2": "^0.31.2",
-    "sass": "^1.49.8",
+    "sass": "^1.49.9",
     "sass-loader": "^10.1.0",
     "semantic-release": "^19.0.2",
     "style-loader": "^2.0.0",
     "ts-jest": "^27.1.3",
     "ts-loader": "^8.0.11",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "webpack": "^4.42.1"
   },
   "engines": {
