--- a/package.json
+++ b/package.json
@@ -55,12 +55,15 @@
     "react-datepicker": "^4.7.0",
     "react-number-format": "^4.9.1",
     "react-select": "^5.2.2",
+    "suneditor": "^2.42.0",
+    "suneditor-react": "^3.4.0",
     "yup": "^0.32.11"
   },
   "peerDependencies": {
     "@fortawesome/pro-light-svg-icons": "^6.1.1",
     "@fortawesome/pro-regular-svg-icons": "^6.1.1",
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
+    "suneditor": "^2.42.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-router-dom": "^6.2.2"
@@ -87,28 +90,28 @@
     "@types/enzyme": "^3.10.11",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^27.4.1",
-    "@types/node": "^12",
+    "@types/node": "^14",
     "@types/numeral": "^2.0.2",
-    "@types/react": "^16.9.10",
+    "@types/react": "^16.9.56",
     "@types/react-datepicker": "^4.3.4",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-test-renderer": "^16.9.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "babel-loader": "^8.2.1",
+    "babel-loader": "^8.2.4",
     "conventional-changelog-conventionalcommits": "^4.6.3",
     "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "license-checker": "^25.0.1",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-test-renderer": "^16.14.0",
@@ -121,7 +124,7 @@
     "sass-loader": "^10.1.0",
     "semantic-release": "^19.0.2",
     "style-loader": "^2.0.0",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.11",
     "typescript": "^4.6.3",
     "webpack": "^4.42.1"
