--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "lint:fix": "eslint --ext .js,.ts,.jsx,.tsx,.json --fix --color ./",
     "nuke": "npm run clean && npm install",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "test": "jest",
-    "test:coverage": "jest --maxWorkers --colors --coverage",
-    "test:watch": "jest --watch"
+    "test": "jest --runInBand",
+    "test:coverage": "jest --runInBand --colors --coverage",
+    "test:watch": "jest --watch --runInBand"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -63,10 +63,10 @@
     "@fortawesome/pro-light-svg-icons": "^6.1.1",
     "@fortawesome/pro-regular-svg-icons": "^6.1.1",
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
-    "suneditor": "^2.42.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "suneditor": "^2.42.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
