--- a/package.json
+++ b/package.json
@@ -75,9 +75,12 @@
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@storybook/addon-a11y": "^6.4.20",
+    "@storybook/addon-actions": "^6.4.20",
     "@storybook/addon-essentials": "^6.4.20",
     "@storybook/addon-links": "^6.4.20",
     "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-storysource": "^6.4.20",
     "@storybook/react": "^6.4.20",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
