--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-storysource": "^6.4.20",
     "@storybook/react": "^6.4.20",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/color-rgba": "^2.1.0",
     "@types/jest": "^27.4.1",
