--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fortawesome/pro-light-svg-icons": "^6.1.1",
+    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@szhsin/react-menu": "^3.0.0",
     "classnames": "^2.3.1",
     "color-alpha": "^1.1.3",
@@ -53,6 +56,7 @@
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react-datepicker": "^4.7.0",
+    "react-router-dom": "^6.2.2",
     "react-number-format": "^4.9.1",
     "react-select": "^5.3.0",
     "suneditor": "^2.42.0",
@@ -60,19 +64,11 @@
     "yup": "^0.32.11"
   },
   "peerDependencies": {
-    "@fortawesome/pro-light-svg-icons": "^6.1.1",
-    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
-    "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-router-dom": "^6.2.2",
-    "suneditor": "^2.42.0"
+    "react-dom": "^16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
-    "@fortawesome/pro-light-svg-icons": "^6.1.1",
-    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
-    "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.2.0",
     "@storybook/addon-a11y": "^6.4.21",
