--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
   },
   "peerDependencies": {
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "suneditor": "^2.42.0",
+    "tippy.js": "^6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
