Build: downgrade to react-router-dom: 5.3.0 with history

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "1.4.4-next.2",
+  "version": "1.4.4-next.3",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
@@ -51,11 +51,12 @@
     "color-alpha": "^1.1.3",
     "color-rgba": "^2.4.0",
     "date-fns": "^2.28.0",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react-datepicker": "^4.7.0",
     "react-number-format": "^4.9.1",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^5.3.0",
     "react-select": "^5.3.0",
     "suneditor": "^2.42.0",
     "suneditor-react": "^3.4.0",
@@ -91,6 +92,7 @@
     "@types/react": "^16.9.56",
     "@types/react-datepicker": "^4.4.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "babel-loader": "^8.2.4",
