--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "jest-canvas-mock": "^2.3.1",
     "license-checker": "^25.0.1",
     "prettier": "^2.6.1",
     "react": "^16.14.0",
