--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "pretty": true,
     "sourceMap": true,
     "strict": true,
+    "strictNullChecks": true,
     "target": "es5",
     "types": ["node", "jest"]
   },
