--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "1.4.5-next.0",
+  "version": "1.4.5",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
