--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -34,7 +34,7 @@ jobs:
           target-folder: docs
       
       - name: Code Coverage
-        uses: coverallsapp/github-action@v1
+        uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel: true
@@ -46,7 +46,7 @@ jobs:
     needs: build-and-test
     steps:
       - name: Let Coveralls know that all tests have finished
-        uses: coverallsapp/github-action@v1
+        uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel-finished: true
