--- a/package.json
+++ b/package.json
@@ -77,10 +77,15 @@
     "@storybook/addon-a11y": "^6.4.22",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
     "@storybook/addon-links": "^6.4.22",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-storysource": "^6.4.22",
+    "@storybook/builder-webpack5": "^6.4.22",
+    "@storybook/manager-webpack5": "^6.4.22",
+    "@storybook/node-logger": "^6.4.22",
     "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "^0.0.11",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/user-event": "^13.5.0",
@@ -118,7 +123,7 @@
     "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.11",
     "typescript": "^4.6.3",
-    "webpack": "^4.42.1"
+    "webpack": "^5.72.0"
   },
   "engines": {
     "node": ">=14.0.0"
