--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@storybook/addon-a11y": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-storysource": "^6.4.22",
     "@storybook/builder-webpack5": "^6.4.22",
