Fix: Organisms/Datatable ensure the gutter column is displayed when total or select are displayed

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "arrowParens": "always",
   "bracketSameLine": true,
+  "endOfLine": "auto",
   "jsxSingleQuote": true,
   "printWidth": 120,
   "semi": true,
