--- a/package.json
+++ b/package.json
@@ -75,15 +75,15 @@
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
-    "@storybook/addon-a11y": "6.4.22",
-    "@storybook/addon-essentials": "6.4.22",
-    "@storybook/addon-interactions": "6.4.22",
-    "@storybook/addon-links": "6.4.22",
+    "@storybook/addon-a11y": "6.5.5",
+    "@storybook/addon-essentials": "6.5.5",
+    "@storybook/addon-interactions": "6.5.5",
+    "@storybook/addon-links": "6.5.5",
     "@storybook/addon-postcss": "2.0.0",
-    "@storybook/addon-storysource": "6.4.22",
-    "@storybook/builder-webpack5": "6.4.22",
-    "@storybook/manager-webpack5": "6.4.22",
-    "@storybook/react": "6.4.22",
+    "@storybook/addon-storysource": "6.5.5",
+    "@storybook/builder-webpack5": "6.5.5",
+    "@storybook/manager-webpack5": "6.5.5",
+    "@storybook/react": "6.5.5",
     "@storybook/testing-library": "0.0.11",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "8.0.0",
@@ -104,6 +104,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-storybook": "^0.5.12",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-canvas-mock": "^2.3.1",
