Build: Fix build Fix: Organisms/Form use memo on Form, FormField, Highlighter

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "1.4.9-next.3",
+  "version": "1.4.9-next.4",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
@@ -45,7 +45,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@szhsin/react-menu": "^3.0.0",
+    "@szhsin/react-menu": "^3.1.0",
     "@tippyjs/react": "^4.2.6",
     "classnames": "^2.3.1",
     "color-alpha": "^1.1.3",
@@ -53,11 +53,11 @@
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
-    "react-collapsed": "^3.3.1",
-    "react-datepicker": "^4.7.0",
+    "react-collapsed": "^3.3.2",
+    "react-datepicker": "^4.8.0",
     "react-number-format": "^4.9.3",
-    "react-select": "^5.3.0",
-    "suneditor": "^2.43.0",
+    "react-select": "^5.3.2",
+    "suneditor": "^2.43.9",
     "suneditor-react": "^3.4.0",
     "yup": "^0.32.11"
   },
@@ -66,7 +66,7 @@
     "react-dom": "^16.8.0",
     "react-router-dom": "5.3.3",
     "suneditor": "^2.43.0",
-    "tippy.js": "^6.3.1"
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -75,16 +75,21 @@
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
-    "@storybook/addon-a11y": "6.5.8",
-    "@storybook/addon-essentials": "6.5.8",
-    "@storybook/addon-interactions": "6.5.8",
-    "@storybook/addon-links": "6.5.8",
+    "@storybook/addon-a11y": "6.5.9",
+    "@storybook/addon-actions": "6.5.9",
+    "@storybook/addon-controls": "6.5.9",
+    "@storybook/addon-docs": "6.5.9",
+    "@storybook/addon-measure": "6.5.9",
+    "@storybook/addon-outline": "6.5.9",
+    "@storybook/addon-toolbars": "6.5.9",
+    "@storybook/addon-interactions": "6.5.9",
+    "@storybook/addon-links": "6.5.9",
     "@storybook/addon-postcss": "2.0.0",
-    "@storybook/addon-storysource": "6.5.8",
-    "@storybook/builder-webpack5": "6.5.8",
-    "@storybook/manager-webpack5": "6.5.8",
-    "@storybook/react": "6.5.8",
-    "@storybook/testing-library": "0.0.12",
+    "@storybook/addon-storysource": "6.5.9",
+    "@storybook/builder-webpack5": "6.5.9",
+    "@storybook/manager-webpack5": "6.5.9",
+    "@storybook/react": "6.5.9",
+    "@storybook/testing-library": "0.0.13",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "8.0.0",
     "@testing-library/user-event": "13.5.0",
@@ -93,12 +98,11 @@
     "@types/node": "^14",
     "@types/numeral": "^2.0.2",
     "@types/react": "^16.9.56",
-    "@types/react-datepicker": "^4.4.0",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "babel-loader": "^8.2.4",
     "css-loader": "^5.0.1",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
@@ -118,13 +122,12 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-typescript2": "^0.31.2",
-    "sass": "^1.51.0",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
     "ts-jest": "^27.1.4",
-    "ts-loader": "^8.0.11",
-    "typescript": "^4.6.3",
-    "webpack": "^5.72.0"
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.3"
   },
   "engines": {
     "node": ">=14.0.0"
