Breaking change: Atoms/Container suppression
Doc: update storybook plugin order
Fix: Atom/Section allow size adjustment even in non collapsible mode
Fix: Atom/SelectInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Atom/MultiSelectInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Atom/DynamicSearchInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Atom/DynamicSearchCreatableInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Molecule/Toaster minor css fixes
Fix: Organism/ActionBar use Arial, Helvetica for the dynamically sized input (as other font are very badly supported)
Fix: Template/Portfolio fix side spacing

--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "toaster"
   ],
   "scripts": {
-    "build": "rollup -c && npm run build:css && npm run build:css-min",
+    "build": "rm -rf dist && rollup -c && npm run build:css",
     "build-storybook": "build-storybook -o docs-build",
     "build:css": "sass src/assets/index.scss dist/ghost-design-system.css --load-path=./node_modules/ --error-css --stop-on-error",
-    "build:css-min": "sass src/assets/index.scss dist/ghost-design-system.min.css  --load-path=./node_modules/ --error-css --stop-on-error --style=compressed",
     "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist docs-build && npm cache verify",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,js,jsx}\"",
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx,json,js,jsx}\"",
@@ -40,10 +39,9 @@
     "test:coverage": "jest --colors --coverage",
     "test:watch": "jest --watch"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
-  "style": "dist/ghost-design-system.min.css",
+  "style": "dist/ghost-design-system.css",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.2.0",
     "@fortawesome/react-fontawesome": "0.2.0",
@@ -60,7 +58,7 @@
     "react-intersection-observer": "9.4.1",
     "react-number-format": "4.9.4",
     "react-query": "3.39.2",
-    "react-select": "5.6.0",
+    "react-select": "5.7.0",
     "react-textarea-autosize": "8.4.0",
     "suneditor": "2.44.3",
     "suneditor-react": "3.4.1",
@@ -80,9 +78,11 @@
     "@fortawesome/pro-light-svg-icons": "6.2.0",
     "@fortawesome/pro-regular-svg-icons": "6.2.0",
     "@fortawesome/pro-solid-svg-icons": "6.2.0",
-    "@rollup/plugin-commonjs": "23.0.2",
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@storybook/addon-a11y": "6.5.13",
+    "@storybook/addon-actions": "6.5.13",
     "@storybook/addon-essentials": "6.5.13",
     "@storybook/addon-interactions": "6.5.13",
     "@storybook/addon-links": "6.5.13",
@@ -95,7 +95,6 @@
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "13.5.0",
-    "@types/color-rgba": "2.1.0",
     "@types/jest": "29.2.2",
     "@types/node": "14",
     "@types/numeral": "2.0.2",
@@ -107,7 +106,6 @@
     "@typescript-eslint/eslint-plugin": "5.42.1",
     "@typescript-eslint/parser": "5.42.1",
     "babel-loader": "9.1.0",
-    "color-rgba": "2.4.0",
     "css-loader": "6.7.1",
     "eslint": "8.27.0",
     "eslint-config-prettier": "8.5.0",
@@ -127,7 +125,7 @@
     "rollup": "3.3.0",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "rollup-plugin-scss": "3.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "0.34.1",
     "sass": "1.56.1",
     "sass-loader": "13.2.0",
