Build: fix build using npm 8.19.3 Build: generate module and commonjs version Build: downgrade storybook to 6.5.13 (as 6.5.16 is broken)
Feat: Atoms and Molecules now have name as optional props
Feat: Atom/DatePickerInput remove global scss, using module
Feat: Atom/YearPickerInput remove global scss, using module
Feat: Atom/RichTextInput remove global scss, using module
Feat: Atom/Tooltip remove global scss, using module
Feat: Atom/Link using NavLink instead of anchor

Fix: Atom/FileInput Ensure minimal 'Error' is raised when the statusText is empty

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,15 +10,16 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
+    strategy:
+      matrix:
+        node: [ 16 ]
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ matrix.node }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ matrix.node }}
     - run : |
           npm config set "@fortawesome:registry" https://npm.fontawesome.com/
           npm config set "//npm.fontawesome.com/:_authToken" ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
