--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "1.4.11",
+  "version": "2.0.0-next.0",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
@@ -27,7 +27,7 @@
     "build": "rm -rf dist && rollup -c && npm run build:css",
     "build-storybook": "build-storybook -o docs-build",
     "build:css": "sass src/assets/index.scss dist/ghost-design-system.css --load-path=./node_modules/ --error-css --stop-on-error",
-    "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist docs-build && npm cache verify",
+    "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist docs-build",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,js,jsx}\"",
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx,json,js,jsx}\"",
     "license": "license-checker --production --relativeLicensePath --csv --out ./THIRD-PARTY.txt",
@@ -40,7 +40,8 @@
     "test:watch": "jest --watch"
   },
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "module": "dist/index.esm.js",
+  "types": "dist/dist/index.d.ts",
   "style": "dist/ghost-design-system.css",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.3.0",
@@ -78,21 +79,21 @@
     "@fortawesome/pro-light-svg-icons": "6.3.0",
     "@fortawesome/pro-regular-svg-icons": "6.3.0",
     "@fortawesome/pro-solid-svg-icons": "6.3.0",
-    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@storybook/addon-a11y": "6.5.16",
-    "@storybook/addon-actions": "6.5.16",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/addon-interactions": "6.5.16",
-    "@storybook/addon-links": "6.5.16",
+    "@rollup/plugin-typescript": "11.0.0",
+    "@storybook/addon-a11y": "6.5.13",
+    "@storybook/addon-actions": "6.5.13",
+    "@storybook/addon-essentials": "6.5.13",
+    "@storybook/addon-interactions": "6.5.13",
+    "@storybook/addon-links": "6.5.13",
     "@storybook/addon-postcss": "2.0.0",
-    "@storybook/addon-storysource": "6.5.16",
-    "@storybook/builder-webpack5": "6.5.16",
-    "@storybook/manager-webpack5": "6.5.16",
-    "@storybook/react": "6.5.16",
+    "@storybook/addon-storysource": "6.5.13",
+    "@storybook/builder-webpack5": "6.5.13",
+    "@storybook/manager-webpack5": "6.5.13",
+    "@storybook/react": "6.5.13",
     "@storybook/testing-library": "0.0.13",
-    "@testing-library/dom": "^9.0.0",
+    "@testing-library/dom": "9.0.0",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "13.5.0",
@@ -119,6 +120,7 @@
     "jest-canvas-mock": "2.4.0",
     "jest-environment-jsdom": "29.4.3",
     "license-checker": "25.0.1",
+    "postcss": "8.4.21",
     "prettier": "2.8.4",
     "react": "16.14.0",
     "react-dom": "16.14.0",
@@ -126,13 +128,13 @@
     "rollup": "3.17.3",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-postcss": "4.0.2",
     "sass": "1.58.3",
     "sass-loader": "13.2.0",
     "style-loader": "3.3.1",
     "ts-jest": "29.0.5",
     "ts-loader": "9.4.2",
-    "typescript": "^4.9",
+    "typescript": "4.9",
     "webpack": "5.75.0"
   }
 }
