--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,11 @@ jobs:
 
       - name: Configure npm
         run: |
-          yarn config set "@fortawesome:registry" https://npm.fontawesome.com/
-          yarn config set "//npm.fontawesome.com/:_authToken" ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+          npm config set "@fortawesome:registry" https://npm.fontawesome.com/
+          npm config set "//npm.fontawesome.com/:_authToken" ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
 
       - name: Install, lint and test
         run: |
-          yarn install --frozen-lockfile
-          yarn lint
-          yarn test
+          npm ci
+          npm run lint
+          npm run test
