--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "3.0.0-futur.0",
+  "version": "3.0.0-futur.1",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
@@ -24,15 +24,15 @@
     "toaster"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c && yarn build:css",
+    "build": "rm -rf dist && rollup -c && npm run build:css",
     "build-storybook": "storybook build -o docs-build",
     "build:css": "sass src/assets/index.scss dist/ghost-design-system.css --load-path=./node_modules/ --error-css --stop-on-error --no-source-map",
     "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist docs-build",
     "license": "license-checker --production --relativeLicensePath --csv --out ./THIRD-PARTY.txt",
     "lint": "eslint --color ./",
-    "lint:debug": "DEBUG=eslint:cli-engine yarn lint",
-    "lint:fix": "yarn lint -- --fix",
-    "nuke": "yarn clean && yarn install",
+    "lint:debug": "DEBUG=eslint:cli-engine npm run lint",
+    "lint:fix": "npm run lint -- --fix",
+    "nuke": "npm run clean && npm install",
     "storybook": "storybook dev -p 9001 -c .storybook",
     "test": "jest",
     "test:coverage": "jest --colors --coverage",
@@ -52,7 +52,7 @@
     "lodash": "4.17.21",
     "numeral": "2.0.6",
     "react-collapsed": "4.0.4",
-    "react-datepicker": "4.17.0",
+    "react-datepicker": "4.18.0",
     "react-hot-toast": "2.4.1",
     "react-infinite-scroller": "1.2.6",
     "react-intersection-observer": "9.5.2",
@@ -68,13 +68,13 @@
   "peerDependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "6.14.1"
+    "react-router-dom": "6.16.0"
   },
   "engines": {
     "node": ">=16.10.0"
   },
   "devDependencies": {
-    "@babel/core": "7.22.17",
+    "@babel/core": "7.22.19",
     "@babel/preset-env": "7.22.15",
     "@babel/preset-react": "7.22.15",
     "@babel/preset-typescript": "7.22.15",
@@ -85,18 +85,18 @@
     "@rollup/plugin-node-resolve": "15.2.1",
     "@rollup/plugin-terser": "0.4.3",
     "@rollup/plugin-typescript": "11.1.3",
-    "@storybook/addon-a11y": "7.4.1",
-    "@storybook/addon-essentials": "7.4.1",
-    "@storybook/addon-interactions": "7.4.1",
-    "@storybook/addon-links": "7.4.1",
-    "@storybook/addon-storysource": "7.4.1",
-    "@storybook/react": "7.4.1",
-    "@storybook/react-webpack5": "7.4.1",
-    "@storybook/testing-library": "0.2.0",
+    "@storybook/addon-a11y": "7.4.2",
+    "@storybook/addon-essentials": "7.4.2",
+    "@storybook/addon-interactions": "7.4.2",
+    "@storybook/addon-links": "7.4.2",
+    "@storybook/addon-storysource": "7.4.2",
+    "@storybook/react": "7.4.2",
+    "@storybook/react-webpack5": "7.4.2",
+    "@storybook/testing-library": "0.2.1",
     "@testing-library/dom": "9.3.1",
     "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
+    "@testing-library/user-event": "14.5.0",
     "@types/jest": "29.5.4",
     "@types/node": "20",
     "@types/numeral": "2.0.2",
@@ -131,7 +131,7 @@
     "rollup-plugin-postcss": "4.0.2",
     "sass": "1.67.0",
     "sass-loader": "13.3.2",
-    "storybook": "7.4.1",
+    "storybook": "7.4.2",
     "style-loader": "3.3.3",
     "ts-jest": "29.1.1",
     "ts-loader": "9.4.4",
